# sql-query-env

./: .gitignore  Dockerfile  README.md  app_main.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  server.py
env/: __init__.py  database.py  environment.py  models.py  tasks.py
server/: app.py
